cleanup for Java 8