@@ -332,7 +332,7 @@ public final class JsonValueUtilsTests {
         });
 
         assertEquals(1, strings.size());
-        assertEquals(STRING_STRING, strings.getFirst());
+        assertEquals(STRING_STRING, strings.get(0));
     }
 
     @Test
@@ -578,6 +578,7 @@ public final class JsonValueUtilsTests {
     @Test
     public void testGetIntLong() {
         JsonValue x = readValue(TEST_JV, STRING);
+        assertNotNull(x);
         JsonValue i = new JsonValue(Integer.MAX_VALUE);
         JsonValue li = new JsonValue((long)Integer.MAX_VALUE);
         JsonValue lmax = new JsonValue(Long.MAX_VALUE);
